[package]
name = "libhdfs3-sys"
version = "0.2.0"
links = "hdfs3"
build = "build.rs"
edition = "2021"

description = "A Rust binding to libhdfs3 from Apache hawq"
authors = ["Ahmed Riza <dr.riza@gmail.com>"]
license = "GPL-3.0"

[dependencies]
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
thiserror = "^1.0"
url = "^2.2"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"

[dev-dependencies]
anyhow = "^1.0"
uuid = {version = "^0.8", features = ["v4"]}
tempfile = "^3.2"
filepath = "^0.1"
